--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ ext {
     rxJavaVer = '2.2.6'
     rxAndroidVer = '2.1.1'
     constraintLayoutVer = '1.1.3'
+    roomVer = '2.2.0'
 
     //Network
     okHttpLogInterceptorVer = '3.10.0'
