--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
@@ -19,7 +19,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
@@ -41,6 +41,7 @@ ext {
     rxAndroidVer = '2.1.1'
     constraintLayoutVer = '1.1.3'
     roomVer = '2.2.0'
+    lifecycleVer = '2.1.0'
 
     //Network
     okHttpLogInterceptorVer = '3.10.0'
