--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ ext {
     constraintLayoutVer = '1.1.3'
     roomVer = '2.2.0'
     lifecycleVer = '2.1.0'
+    dataBindingVer = '3.2.0-alpha10'
 
     //Network
     okHttpLogInterceptorVer = '3.10.0'
