--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlinVer = '1.3.50'
+    ext.navCompVer = '2.2.0-rc02'
     repositories {
         google()
         jcenter()
@@ -10,6 +11,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVer"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navCompVer"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -43,6 +45,7 @@ ext {
     roomVer = '2.2.0'
     lifecycleVer = '2.1.0'
     dataBindingVer = '3.2.0-alpha10'
+    navCompVer = '2.2.0-rc02'
 
     //Network
     okHttpLogInterceptorVer = '3.10.0'
